# janitor

./: .gitignore  LICENSE  Makefile  README.md  default.nix  janitor.cabal  shell.nix  static.nix
.github/workflows/: release.yaml
app/: Main.hs
src/: CLI.hs  Janitor.hs  OAuth1.hs  PrettyTerm.hs  PrettyTweet.hs
src/Data/: Credentials.hs  Tweets.hs  TweetsV1.hs
