cabal-version:       >=1.10
name:                janitor
version:             0.1.0.0
license-file:        LICENSE
author:              jeovazero
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     Janitor,
                       OAuth1
  build-depends:       base
  default-language:    Haskell2010


executable janitor
  main-is:             Main.hs
  hs-source-dirs:      src app
  build-depends:       base,
                       bytestring,
                       http-client,
                       http-client-tls,
                       text,
                       aeson,
                       cryptohash-sha1,
                       base64-bytestring
  default-language:    Haskell2010


